# CamBam-Builder

./: .gitignore  LICENSE  PROGRESS.md  README.md  cad_common.py  cad_transformations.py  cambam_builder.py  cambam_entities.py  cambam_project.py  cambam_reader.py  cambam_writer.py  main.py  pyproject.toml  refactored_cambam_builder.py  setup.py  structure_spec.md  test.py
cambam_builder/: __init__.py  cad_common.py  cad_transformations.py  cambam_entities.py  cambam_project.py  cambam_reader.py  cambam_writer.py
cambam_builder/legacy/: __init__.py  cambam_builder_cli.py
demos/: test.py
legacy_cambam_builder/: __init__.py  cambam_builder_cli.py  cambam_builder_legacy.py  legacy_cambam_project.py
